# DiamondsImager

./: .env.example  .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
diamonds_gen/: Cargo.toml
diamonds_gen/src/: dmc.rs  generator.rs  types.rs
diamonds_imager/: .env.example  Cargo.toml
diamonds_imager/src/: app.rs  errors.rs  handlers.rs  lib.rs  main.rs  requests.rs  results.rs  router.rs  services.rs  settings.rs
diamonds_imager/src/services/: dmc.rs  mod.rs
diamonds_imager/src/services/processing/: image_manip.rs  mod.rs  worker.rs
diamonds_imager/tests/: test_integrations.rs
ditherum/: Cargo.toml  tmp_palette.json
ditherum/src/: image.rs  image_utils.rs  lib.rs  palette_utils.rs
ditherum/src/algorithms/: dithering.rs  kernel.rs  kmean.rs  mod.rs
src/: app.rs  errors.rs  handlers.rs  lib.rs  main.rs  requests.rs  results.rs  router.rs  routes.rs  services.rs  settings.rs
src/backend/: mod.rs  routes.rs
src/backend/image/api/: forms.rs  handlers.rs  mod.rs  responses.rs  routes.rs
src/backend/image/services/: errors.rs  mod.rs
src/frontend/: handlers.rs  routes.rs
src/handlers/: mod.rs
src/routes/: mod.rs
src/services/: mod.rs
static/: index.html
tests/: test_integrations.rs  test_upload_image.rs  upload_image.rs
