[package]
name = "diamonds-imager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-utils = "3.0.1"
actix-multipart = { version = "0.7.2", features = ["tempfile"] }
actix-form-data = "0.6.2"
actix-files = "0.6.6"

serde = { version = "1.0.217", features = ["derive"]}

log = "0.4.25"
env_logger = "0.11.6 "

dotenv = "0.14.1"