[package]
name = "diamonds-imager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.8.1" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

reqwest = { version = "0.12.12", features = ["multipart", "json"] }

serde = { version = "1.0.217", features = ["derive"]}

dotenv = "0.15.0"

uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

thiserror = "2.0.11"
image = "0.25.5"

tempfile = "3.16.0"