[package]
name = "diamonds_imager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.8.1", features = ["multipart"]}

tower-http = { version = "0.6.2", features = ["trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

reqwest = { version = "0.12.12", features = ["multipart", "json"] }

serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.140"

dotenv = "0.15.0"

uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

thiserror = "2.0.12"
image = "0.25.5"
palette = { version = "0.7.6", features = ["std", "serializing"] }

tempfile = "3.16.0"

ctrlc = "3.4.6"

ditherum = { version = "*", path = "../ditherum" }
